--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "sass": "^1.71.1"
   },
