--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
