--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.71.1",
     "swiper": "^11.0.7"
   },
