--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "private": true,
+  "homepage": "https://illarion-porubin.github.io/react-online-kitchen/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
